# vkconcli

./: .gitignore  Makefile  Makefile.in  README  config.h.in  configure.ac
src/: cache.c  cache.h  dectree.c  dectree.h  gen.py  global-vars.c  global-vars.h  main.c  net.c  net.h  query.c  query.h  struct_message.c  struct_message.h  structures-auto.c  structures-auto.h  structures.c  structures.h  tree.c  tree.h  util_config.c  util_config.h  util_db.c  util_db.h  util_io.c  util_io.h  util_json.c  util_json.h  util_parser.c  util_parser.h  util_tokenizer.c  util_tokenizer.h  vk_errors.h  vkconcli.h
src/conf/: messages.conf  users.conf
